--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,6 +2,9 @@ version: "2"
 checks:
   file-lines:
     enabled: false
+  identical-code:
+    config:
+      threshold: 40 # Unfortunately, we have a lot of duplicate code in places like lib/inspec/control_eval_context.rb
 plugins:
   fixme:
     enabled: true
@@ -11,6 +14,8 @@ plugins:
         - rubocop:disable
   flog:
     enabled: true
+    config:
+      score_threshold: 30
   markdownlint:
     enabled: true
   rubocop:
@@ -18,3 +23,5 @@ plugins:
     channel: rubocop-0-49
     config:
       file: .rubocop.yml
+exclude_patterns:
+  - "www/source/javascripts/"
