Set the umask on travis in before_install.
https://travis-ci.community/t/file-permissions-just-gone-up-to-664/1547/5

Signed-off-by: Ryan Davis <zenspider@chef.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_install:
 - "gem update --system '3.0'"
 - gem --version
 - bundle --version
+- umask 0022
 env:
   - SLOW=1 NO_AWS=1
   - CI_ENABLE_COVERAGE=true SLOW=1
