--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -23,6 +23,12 @@ pipelines:
       definition: .expeditor/release.omnibus.yml
       env:
         - ADHOC: true
+  - verify:
+      description: Pull Request validation tests
+      public: true
+      env:
+        - SLOW=1
+        - NO_AWS=1
 
 # Slack channel in Chef Software slack to send notifications about build failures, etc
 slack:
