--- a/.expeditor/coverage.pipeline.yml
+++ b/.expeditor/coverage.pipeline.yml
@@ -1,9 +1,14 @@
 ---
+expeditor:
+  defaults:
+    buildkite:
+      timeout_in_minutes: 30
+
 
 steps:
 
   - label: coverage
-    command:
+    commands:
       - bundle install --jobs=7 --retry=3 --without tools maintenance deploy
       - bundle exec rake test:default
     expeditor:
