--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -8,7 +8,9 @@ steps:
 
 - label: run-tests-ruby-2.4
   command:
+    - echo "--- bundle install"
     - bundle install --jobs=7 --retry=3 --without tools maintenance deploy
+    - echo "+++ bundle exec rake"
     - bundle exec rake
   expeditor:
     executor:
@@ -17,7 +19,9 @@ steps:
 
 - label: run-tests-ruby-2.5
   command:
+    - echo "--- bundle install"
     - bundle install --jobs=7 --retry=3 --without tools maintenance deploy
+    - echo "+++ bundle exec rake"
     - bundle exec rake
   expeditor:
     executor:
@@ -26,7 +30,9 @@ steps:
 
 - label: run-tests-ruby-2.6
   command:
+    - echo "--- bundle install"
     - bundle install --jobs=7 --retry=3 --without tools maintenance deploy
+    - echo "+++ bundle exec rake"
     - bundle exec rake
   expeditor:
     executor:
