Automatically publish release notes and announce releases
This change updates InSpec begin using the streamlined release notes
process we are already using on Automate and Chef Workstation. More
details on this new process can be found on the following epic:
https://github.com/chef/release-engineering/issues/692

Signed-off-by: Seth Chisamore <schisamo@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -102,4 +102,10 @@ subscriptions:
     - built_in:create_github_release
     - built_in:tag_docker_image
     - built_in:promote_habitat_packages
+    - bash:.expeditor/publish-release-notes.sh:
+         post_commit: true
+    - bash:.expeditor/purge-cdn.sh:
+         post_commit: true
+    - bash:.expeditor/announce-release.sh:
+         post_commit: true
     - built_in:notify_chefio_slack_channels
