--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -29,3 +29,14 @@ steps:
     executor:
       docker:
         image: ruby:2.6-stretch
+
+- label: run-tests-ruby-2.6-windows
+  command:
+    - /workdir/.expeditor/buildkite/verify.ps1
+  expeditor:
+    executor:
+      docker:
+        environment:
+          - BUILDKITE
+        host_os: windows
+        shell: ["powershell", "-Command"]
