--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,5 @@
 # Order is important. The last matching pattern has the most precedence.
 
-*             @chef/inspec-team
-docs/**       @chef/docs-team @chef/inspec-team
-.expeditor/** @chef/jex-team
-omnibus/**    @chef/ben-team
+*             @inspec/inspec-core-team
+docs/**       @chef/docs-team @inspec/inspec-core-team
+*.md          @chef/docs-team @inspec/inspec-core-team
