--- a/test/artifact/Rakefile
+++ b/test/artifact/Rakefile
@@ -1,5 +1,7 @@
 require "rake/testtask"
 
-Rake::TestTask.new(:default) do |t|
-  t.test_files = Dir["test/artifact/*_test.rb"].sort
+Rake::TestTask.new(:test) do |t|
+  t.test_files = FileList["*_test.rb"].sort
 end
+
+task default: :test
